 - Add support for MPI_Irsend, MPI_Rsend, MPI_Rsend_init
 - SMPI can now be selected by cmake's find_module(MPI) with
   MPI_C_COMPILER, MPI_CXX_COMPILER, MPI_Fortran_COMPILER variables.
 - Add support for MPI Errhandlers in Comm, File or Win. Default errhandler is now
   MPI_ERRORS_ARE_FATAL, so codes which were sending warnings may start failing.

Model-Checker:
 - Option model-checker/hash was removed. This is always activated now.
 - New option smpi/buffering controls the MPI buffering in MC mode.
 - MPI calls now MC_assert() that no MPI_ERR_* code is returned. 
   This is useful to check for MPI compliance.

XBT:
 - xbt_mutex_t and xbt_cond_t are now marked as deprecated, a new C interface
   on S4U is already available to replace them by sg_mutex_t and sg_cond_t. 

Fixed bugs (FG#.. -> framagit bugs; FG!.. -> framagit merge requests):
 - FG#28: add sg_actor_self (and other wrappers on this_actor methods)
 - FG#29 and FG#33: provide a new C API to mutexes and condition variables 
 - FG#30: convert MSG_process_{un}ref to sg_actor_{un}ref
 - FG#31: per-actor data
 - FG#34: SG_BARRIER_SERIAL_THREAD?
 - FG#35: model-checker does not like buster-produced binaries
 - FG!13: MC: complete workaround in the error msg seen on modern systems
 - FG!15: execute_flops now logs compute
 - FG!16: Fix the ns-3 bindings when several flows are simultaneously finishing
 - FG!17: ns-3: unblock the right number of communications + others issues

----------------------------------------------------------------------------

SimGrid (3.23.2) July 8. 2019

Documentation:
 - Nicer introduction page.
 - Migrate the "Deploy your application" page to the new doc.
 - Move Java as a subtree of MSG.

General:
 - Rename simgrid::TimeoutError to simgrid::TimeoutException.

XBT:
 - Drop xbt_dynar_sort_strings().

Bugs:
 - Really fix FG#26: Turning off a link should raise NetworkFailureException
 - FG#27: Wrong exception thrown to wait_any when link is turned off