@@ -27,6 +27,8 @@ set_property(TARGET simgrid
 add_dependencies(simgrid maintainer_files)
 
 if(enable_model-checking)
+  set_property(TARGET simgrid PROPERTY CXX_STANDARD 14)
+
   add_executable(simgrid-mc ${MC_SIMGRID_MC_SRC})
   target_link_libraries(simgrid-mc simgrid)
   set_target_properties(simgrid-mc
